--- a/main.css
+++ b/main.css
@@ -1,14 +1,17 @@
 html{
     height: 100%;
+    margin: 0;
 }
 
 body{
     height: 100%;
+    margin: 0;
 }
 
 .container{
     display: flex;
     flex-direction: column;
+    margin: 0;
     height: 100%;
 }
 
@@ -18,52 +21,76 @@ body{
 }
 
 #top{
+    box-sizing: border-box;
     height:10%;
+    width: 100%;
+}
+
+#middle{
+    box-sizing: border-box;
+    height: 30%;
+    width: 100%;
+}
+
+#bottom{
+    box-sizing: border-box;
+    height: 60%;
     width: 100%;
 }
 
 .thin{
     border-style: solid;
     border-color: black;
-    border-width: 0 5px 5px 5px;
+    border-width: 0 5px 5px 0px;
+}
+
+.rightend{
+    border-right: 0;
 }
 
 .XXsmall{
-    width: 10%;
+    box-sizing: border-box;
+    flex-basis: 10%;
 }
 
 .Xsmall{
-    width: 17.5%;
+    box-sizing: border-box;
+    flex-basis: 17.5%;
 }
 
 .small{
-    width: 22%
+    box-sizing: border-box;
+    flex-basis: 22.23%
 }
 
 .medium{
-    width: 33.75%
+    box-sizing: border-box;
+    flex-basis: 33.75%
 }
 
 .large{
-    width: 48.75%
+    box-sizing: border-box;
+    flex-basis: 48.75%
 }
 
 .Xlarge{
-    width: 66.25%
+    box-sizing: border-box;
+    flex-basis: 66.25%
 }
 
-/* .trOne{
+.white{
     background-color: white;
-    width: 10%;
 }
 
-.trTwo{
-    background-color: white;
-    width: 10%;
-}
-
-.trThree{
+.yellow{
     background-color: yellow;
-    width: 67%
-} */
+}
+
+.blue{
+    background-color: blue;
+}
+
+.red{
+    background-color: red;
+}
 
