--- a/main.css
+++ b/main.css
@@ -20,6 +20,11 @@ body{
     flex-direction: row;
 }
 
+.col{
+    display: flex;
+    flex-direction: column;
+}
+
 #top{
     box-sizing: border-box;
     height:10%;
@@ -38,14 +43,27 @@ body{
     width: 100%;
 }
 
+
+
 .thin{
     border-style: solid;
     border-color: black;
     border-width: 0 5px 5px 0px;
+
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 .rightend{
     border-right: 0;
+}
+
+.base{
+    border-bottom: 0;
+}
+
+.full{
+    box-sizing: border-box;
 }
 
 .XXsmall{
@@ -94,3 +112,37 @@ body{
     background-color: red;
 }
 
+.words{
+    display: flex;
+}
+
+#lowrect{
+    box-sizing: border-box;
+    height: 13%;
+    border-top: 8px solid black;
+}
+
+#highrect{
+    box-sizing: border-box;
+    height: 87%;
+}
+
+#overbox{
+    box-sizing: border-box;
+    height: 37%;
+}
+
+#underbox{
+    box-sizing: border-box;
+    height: 63%;
+}
+
+.important{
+    font-size: 5em;
+    margin: 0;
+    padding: 0 3% 0 2%;
+}
+
+#title{
+    justify-content: flex-start;
+} 
