--- a/server/public/main.css
+++ b/server/public/main.css
@@ -4,15 +4,41 @@
     flex-wrap: wrap;
 }
 
+ 
+#nav{
+        order:-1;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
 #name{
-    flex-basis: 27%;
-    flex-grow: 2;
-}
+        align-items: center;
+        justify-content: center;
+        flex-basis: 100%;
+    }
 
 #content{
-    flex-grow: 7;
-}
+        flex-grow: 7;
+    }
+    
+@media (min-width: 769px){
+    
+    #name{
+        flex-basis: 27%;
+        flex-grow: 2;
+    }
 
-#nav{
-    flex-grow: 2;
+    #content{
+        flex-grow: 7;
+    }
+
+    #nav{
+        flex-grow: 2;
+        justify-content: flex-start;
+        align-items: center;
+        order: 2;
+        display: flex;
+        flex-direction: column;
+    }
 }
