--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,8 +1,25 @@
+html, body{
+    height: 100%;
+    width: 100%;
+    font-family: 'Museosans 900', sans-serif;
+    display: flex;
+    margin: 0;
+}
+
+#app{
+    width: 100%;
+}
+
+
 #wrapper{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
+
+
 
  
 #nav{
@@ -23,22 +40,51 @@
     }
     
 @media (min-width: 769px){
-    
+    h1{
+        font-size: 3em;
+        margin: 0;
+        padding-top: 10%;
+    }
     #name{
         flex-basis: 27%;
         flex-grow: 2;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-start;
+        padding-right: 1%;
+    }
+
+    #Emil{
+        background-color: black;
+        color: white;
+        width: 100%;
+        padding-top: 16%;
+        justify-self: flex-end;
     }
 
     #content{
         flex-grow: 7;
+        flex-basis: 43%;
+        padding-left: 1%;
     }
 
     #nav{
+        background-color: black;
+        color: white;
+        text-decoration: none;
+        margin-top: 15%;
+        flex-basis: 20%;
         flex-grow: 2;
         justify-content: flex-start;
-        align-items: center;
+        align-items: flex-start;
         order: 2;
         display: flex;
         flex-direction: column;
+    }
+
+    a:focus, a:visited, a:active, a{
+        text-decoration: none;
+        color: white;
+        padding-left: 10%;
     }
 }
