--- a/server/public/main.css
+++ b/server/public/main.css
@@ -4,6 +4,10 @@ html, body{
     font-family: 'Museosans 900', sans-serif;
     display: flex;
     margin: 0;
+    background-color: #f5e8e1;
+    color: rgb(32,32,32);
+    /* background-color: rgb(73, 73, 73);
+    color: white; */
 }
 
 #app{
@@ -44,6 +48,7 @@ html, body{
         font-size: 3em;
         margin: 0;
         padding-top: 10%;
+        padding-left: 1%;
     }
     #name{
         flex-basis: 27%;
@@ -55,11 +60,12 @@ html, body{
     }
 
     #Emil{
-        background-color: black;
+        background-color: rgb(32,32,32);;
         color: white;
         width: 100%;
         padding-top: 16%;
-        justify-self: flex-end;
+        justify-self: baseline;
+        border-bottom-right-radius: 1%;
     }
 
     #content{
@@ -68,8 +74,12 @@ html, body{
         padding-left: 1%;
     }
 
+    .bodytext{
+        font-size: 2em;
+    }
+
     #nav{
-        background-color: black;
+        background-color: rgb(32,32,32);
         color: white;
         text-decoration: none;
         margin-top: 15%;
@@ -80,6 +90,7 @@ html, body{
         order: 2;
         display: flex;
         flex-direction: column;
+        border-top-left-radius: 1%;
     }
 
     a:focus, a:visited, a:active, a{
