--- a/server/public/main.css
+++ b/server/public/main.css
@@ -6,10 +6,8 @@ html, body{
     margin: 0;
     color: rgb(32,32,32);
     background-color: #f5d2bc;
-background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
-/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
-    /* background-color: rgb(73, 73, 73);
-    color: white; */
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
+    /* credit to transparenttextures.com for the backround image */
 }
 
 .bodylink:focus, .bodylink:visited, .bodylink:active, .bodylink {
@@ -92,7 +90,6 @@ background-image: url("https://www.transparenttextures.com/patterns/45-degree-fa
         flex-grow: 2;
         justify-content: flex-start;
         align-items: flex-end;
-        
         margin-top: 0.05%;
     }
     
