--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,146 +1,27 @@
-html, body{
-    height: 100%;
-    width: 100%;
-    font-family: 'Museosans 900', sans-serif;
-    display: flex;
+html{
+    height: 100vh;
     margin: 0;
-    color: rgb(32,32,32);
-    background-color: #f5d2bc;
-    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
-    /* credit to transparenttextures.com for the backround image */
+    overflow: hidden;
 }
 
-.bodylink:focus, .bodylink:visited, .bodylink:active, .bodylink {
-    padding: 0;
+body{
+    margin: 0;
+    height: 100%;
 }
-
-#app{
-    width: 100%;
-}
-
 
 #wrapper{
-    width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
 }
 
-#name{
-        order: -2;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        flex-basis: 100%;
-        margin-top: 17%;
-    }
-
-#social{
-    display: flex;
-    margin-top: 5%;
+p{
+    text-align: justify;
+    font-size:  10px;
 }
 
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 20px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 5%;
-    border-radius: 50%;
-    }
-    
-.fa:hover {
-        opacity: 0.7;
-    }
-    
-.fa-linkedin {
-    background: #f5d2bc;
-    color: black;
-    }
-
-.fa-github {
-    background: #f5d2bc;
-    color: black;
-    }
-
-#mobile-view{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-    
-@media (min-width: 769px){
-    #wrapper{
-        flex-direction: row; 
-    }
-
-    a:focus, a:visited, a:active, a{
-        text-decoration: none;
-        color: white;
-        padding-left: 10%;
-        padding-top: 7.5%;
-    }
-    #name{
-        display: flex;
-        flex-basis: 27%;
-        flex-grow: 2;
-        justify-content: flex-start;
-        align-items: flex-end;
-        margin-top: 0.06%;
-    }
-    
-    h1{
-        font-size: 3em;
-        margin: 0;
-        padding-top: 10%;
-    }
-
-    #Emil{
-        display: flex;
-        background-color: rgb(32,32,32);
-        color: white;
-        width: 100%;
-        padding-top: 16%;
-        padding-right: 2%;
-        justify-self: baseline;
-        border-bottom-right-radius: 1%;
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
-
-    #content{
-        flex-grow: 7;
-        flex-basis: 43%;
-        margin-left: 1%;
-        height: auto;
-    }
-
-    .bodytext{
-        font-size: 1.3em;
-        padding-left: 1%;
-    }
-
-    #nav{
-        background-color: rgb(32,32,32);
-        color: white;
-        text-decoration: none;
-        display: flex;
-        margin-top: 10%;
-        flex-basis: 20%;
-        flex-grow: 2;
-        justify-content: flex-start;
-        align-items: flex-start;
-        order: 2;
-        flex-direction: column;
-        border-top-left-radius: 1%;
-    }
-
-    .bodylink:focus, .bodylink:visited, .bodylink:active, .bodylink {
-        padding: 0;
-    }
-
+#slider{
+    position: absolute;
+    left: 100px;
+    top: 100px;
+    z-index: 1;
+    background-color: red;
 }
