--- a/server/public/main.css
+++ b/server/public/main.css
@@ -32,7 +32,7 @@ body{
 #social{
     display: flex;
     flex-grow: 1;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-around;
     flex-direction: row;
     width: 19.5%;
@@ -52,7 +52,10 @@ h1{
 }
 
 #confirmmes{
-    visibility: collapse;
+    text-align: center;
+    justify-self: center;
+    visibility: hidden;
+    width: 100%;
 }
 
 @media screen and (max-width: 320px){
@@ -61,9 +64,10 @@ h1{
     }
 }
 
-@media screen and (min-width: 779px){
+@media screen and (min-width: 759px){
     #social{
         flex-direction: column;
+        align-items: center;
     }
     a {
         width: 30%;
