--- a/server/public/main.css
+++ b/server/public/main.css
@@ -36,6 +36,7 @@ body{
     justify-content: space-around;
     flex-direction: row;
     width: 19.5%;
+    padding-top: 10%;
 }
 a{
     width: 21%;
@@ -68,9 +69,10 @@ h1{
     #social{
         flex-direction: column;
         align-items: center;
+        padding-top: 0;
     }
     a {
-        width: 30%;
+        width: 100px;
         cursor: pointer;
     }
     img{
